--- a/async/makeAPromise.html
+++ b/async/makeAPromise.html
@@ -1,6 +1,7 @@
+<script>
 function Promise(executor){
 	var self=this
-	self.statue='pendig';
+	self.status='pending';
 	self.data=undefined;
 	self.onResolvedCallback=[];
 	self.onRejectedCallback=[]
@@ -32,7 +33,7 @@ function Promise(executor){
 	}
 }
 
-Promise.prototype.then=(onResolved,onRejected)=>{
+Promise.prototype.then=function(onResolved,onRejected){
 	var self=this;
 	var promise2;
 
@@ -71,7 +72,8 @@ Promise.prototype.then=(onResolved,onRejected)=>{
 		return promise2=new Promise((resolve,reject)=>{
 			self.onResolvedCallback.push((value)=>{
 				try{
-					var x=onRejected(self.data)
+					var x=onResolved(self.data)
+					//链式调用
 					if(x instanceof Promise){
 						x.then(resolve,reject);
 					}
@@ -98,12 +100,20 @@ Promise.prototype.then=(onResolved,onRejected)=>{
 	}
 }
 
+//实现链式调用
 new Promise((resolve,reject)=>{
 	console.log('start');
 	setTimeout(function(){
 		resolve('lalala');
 	},500)
 }).then((data)=>{
-	
+	console.log(data);
+	return new Promise((resolve)=>{
+		setTimeout(()=>{
+			resolve('lelele');
+		},500)
+	})
+}).then((data)=>{
 	console.log(data);
 })
+</script>
